sumo/tests/netconvert/import/XML/errors/broken_edge/edge#id__empty1/errors.netconvert
Error: Missing id of a 'edge'-object.
Quitting (on error).
